# bpmlm

./: CMakeLists.txt  README.md
src/: Chance.cpp  Chance.h  Person.cpp  Person.h  ProductLine.cpp  ProductLine.h  Simulation.cpp  Simulation.h  main.cpp
tests/: CMakeLists.txt
tests/chance/: CMakeLists.txt  chance_test.cpp
tests/person/: CMakeLists.txt  person_test.cpp
